log/build_2021-07-24_21-27-24/quad/stderr.log
  File "/home/devpc/Desktop/quad_ws/install/quad/lib/python3.8/site-packages/quad/quad.py", line 20
    self.toggle = !self.toggle
                  ^
SyntaxError: invalid syntax

